--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -909,7 +909,16 @@ list_susbsriber = select subscriber.subscriberNumber, subscriber.subscriberName,
 ! End List subscriber
 
 ! List Profarma Invoice
-list_invoice = 
+list_invoice = select invoice.invoiceNumber, invoice.invoiceCreationDate, \
+               subscriber.subscriberNumber, subscriber.subscriberName, \
+                subscriber_type.subtypecode, journals.journalCode, subscriptiondetails.copies, subscriptiondetails.startYear, \
+                subscriptiondetails.endYear \
+                from invoice, subscription, subscriber, subscriber_type, subscriptiondetails, \
+                journal_groups, journal_group_contents, journals \
+                where invoice.subscriptionId = subscription.id and subscription.subscriberID = subscriber.id \
+                and subscriber.subtype = subscriber_type.id and subscriptiondetails.subscriptionID = subscription.id \
+                and subscriptiondetails.journalGroupID = journal_groups.id and journal_group_contents.journalGroupId = journal_groups.id \
+                and journal_group_contents.journalId = journals.id
 ! End List Profarma Invoice
 
 #--------------------------------------------------------------------------
