--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -503,8 +503,8 @@ get_missing_issues_for_subscriber = SELECT t1.ID as id,\
                                         t2.MISSINGCOPIES as missingcopies,\
                                         t2.ACTION as action,\
                                         t2.SENTON as senton \
-                                   FROM MISSING_ISSUE t1,\
-                                        MISSING_ISSUE_JOURNALS t2,\
+                                   FROM missing_issue t1,\
+                                        missing_issue_JOURNALS t2,\
                                         INWARD t3,\
                                         JOURNALS t4 \
                                 WHERE     t1.SUBSCRIBERID = ? \
@@ -880,7 +880,7 @@ subscription_Figures = SELECT count(subscriber.subscriberNumber), sum(subscripti
                                                                    subscriptiondetails.endMonth, \
                                                                    '-', \
                                                                    '1')) \
-                        GROUP BY journals.journalCode AND subscriber_type.subtypecode
+                            GROUP BY journals.journalCode AND subscriber_type.subtypecode
 
 ! End Subscription figures
 get_max_no_of_issues = select max(issues) FROM journals
