--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -15,7 +15,7 @@ log4j.logger.JDSMigration.CurtWas=FATAL
 log4j.logger.JDSMigration.MigrationBase=FATAL
 log4j.logger.JDSMigration.circulationFigures=FATAL
 log4j.logger.JDSMigration.migrateAssociates=WARN
-log4j.logger.JDSMigration.migrateEBALL=WARN
+log4j.logger.JDSMigration.migrateEBALL=DEBUG
 log4j.logger.JDSMigration.migrateExchange=WARN
 log4j.logger.JDSMigration.migrateFellows=WARN
 log4j.logger.JDSMigration.migrateHONFEL=WARN
