Made modification to the way city and country is migrated. Partially done for now.

--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -6,7 +6,7 @@ log4j.rootLogger=ERROR, stdout, migration
 log4j.logger.JDSMigration.OldInward=FATAL
 log4j.logger.JDSMigration.Inward=FATAL
 log4j.logger.JDSMigration.Temp=FATAL
-log4j.logger.JDSMigration.IndTemp=FATAL
+log4j.logger.JDSMigration.IndTemp=WARN
 log4j.logger.JDSMigration.Subscriber=FATAL
 log4j.logger.JDSMigration.Subscription=FATAL
 log4j.logger.JDSMigration.Corr=FATAL
