Made changes to the way cities are migrated. Made same changes as made in IndTemp

--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger=ERROR, stdout, migration
 
 log4j.logger.JDSMigration.OldInward=FATAL
 log4j.logger.JDSMigration.Inward=FATAL
-log4j.logger.JDSMigration.Temp=FATAL
+log4j.logger.JDSMigration.Temp=WARN
 log4j.logger.JDSMigration.IndTemp=WARN
 log4j.logger.JDSMigration.Subscriber=FATAL
 log4j.logger.JDSMigration.Subscription=FATAL
@@ -34,6 +34,6 @@ log4j.appender.migration.layout=org.apache.log4j.PatternLayout
 log4j.appender.migration.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
 log4j.appender.migration.File=logs\\${log4j.logger}\\migration.log
 
-log4j.appender.migration.MaxFileSize=500KB
+log4j.appender.migration.MaxFileSize=2500KB
 # Keep one backup file
 log4j.appender.migration.MaxBackupIndex=2
