city sql changes

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -921,6 +921,32 @@ list_invoice = select invoice.invoiceNumber, invoice.invoiceCreationDate, \
                 and journal_group_contents.journalId = journals.id
 ! End List Profarma Invoice
 
+! List Journal Rates
+journal_groups = select id, journalGroupName from journal_groups
+
+get_rate_period = select distinct(period) from subscription_rates where `year` = ?
+
+get_rate = select subscription_rates.rate as price_rate \
+           from \
+            subscription_rates, subscriber_type \
+            where \
+            subscription_rates.`year` = ? AND subscription_rates.period = ? \
+            AND subscription_rates.journalGroupId = ? AND subscription_rates.subtypeId = subscriber_type.id \
+            and subscriber_type.subtypedesc = ?
+
+! End List Journal Rates
+
+!List Reminders
+list_reminders_subscriber =  select subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                subscriber.email \
+                                from reminders, subscription, \
+                                subscriber, subscriber_type \
+                                where \
+                                subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
+                                and subscriber.subtype = subscriber_type.id \
+                                and reminders.reminderType = ?
+! End List Reminders
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
