--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -12,6 +12,8 @@ log4j.logger.JDSMigration.Subscription=FATAL
 log4j.logger.JDSMigration.Corr=FATAL
 log4j.logger.JDSMigration.CurrMem=FATAL
 log4j.logger.JDSMigration.CurtWas=FATAL
+log4j.logger.JDSMigration.member=FATAL
+log4j.logger.JDSMigration.HON=FATAL
 log4j.logger.JDSMigration.MigrationBase=FATAL
 log4j.logger.JDSMigration.circulationFigures=FATAL
 log4j.logger.JDSMigration.migrateAssociates=FATAL
