--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -1,5 +1,10 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
+#ALL          The ALL has the lowest possible rank and is intended to turn on all logging.
+#DEBUG        The DEBUG Level designates fine-grained informational events that are most useful to debug an application.
+#INFO         The INFO level designates informational messages that highlight the progress of the application at coarse-grained level.
+#WARN         The WARN level designates potentially harmful situations.
+#ERROR        The ERROR level designates error events that might still allow the application to continue running.
+#FATAL        The FATAL level designates very severe error events that will presumably lead the application to abort.
+#OFF          The OFF has the highest possible rank and is intended to turn off logging.
 
 log4j.rootLogger=ERROR, stdout, migration
 
