--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -6,12 +6,12 @@
 #FATAL        The FATAL level designates very severe error events that will presumably lead the application to abort.
 #OFF          The OFF has the highest possible rank and is intended to turn off logging.
 
-log4j.rootLogger=ERROR, stdout, migration
+log4j.rootLogger=FATAL, stdout, migration
 
 log4j.logger.JDSMigration.OldInward=FATAL
 log4j.logger.JDSMigration.Inward=FATAL
-log4j.logger.JDSMigration.Temp=WARN
-log4j.logger.JDSMigration.IndTemp=WARN
+log4j.logger.JDSMigration.Temp=FATAL
+log4j.logger.JDSMigration.IndTemp=FATAL
 log4j.logger.JDSMigration.Subscriber=FATAL
 log4j.logger.JDSMigration.Subscription=FATAL
 log4j.logger.JDSMigration.Corr=FATAL
