Added new countries and a subscriber type. Changed log4j to log only fatal issues to fasten migration. Fixed crash in currmem and curtwas.

--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -17,6 +17,7 @@ log4j.logger.JDSMigration.Subscription=FATAL
 log4j.logger.JDSMigration.Corr=FATAL
 log4j.logger.JDSMigration.CurrMem=FATAL
 log4j.logger.JDSMigration.CurtWas=FATAL
+log4j.logger.JDSMigration.CURRFEX=FATAL
 log4j.logger.JDSMigration.member=FATAL
 log4j.logger.JDSMigration.HON=FATAL
 log4j.logger.JDSMigration.MigrationBase=FATAL
