--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -30,6 +30,7 @@ log4j.logger.JDSMigration.migrateHONFEL=FATAL
 log4j.logger.JDSMigration.migrateJGRANT=FATAL
 log4j.logger.JDSMigration.migrateRES=FATAL
 log4j.logger.JDSMigration.migrateCURR=FATAL
+log4j.logger.JDSMigration.MigrationBase.getCityID=DEBUG, cities
 
 # Appender "stdout" settings
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -41,7 +42,13 @@ log4j.appender.migration=org.apache.log4j.RollingFileAppender
 log4j.appender.migration.layout=org.apache.log4j.PatternLayout
 log4j.appender.migration.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
 log4j.appender.migration.File=logs\\${log4j.logger}\\migration.log
-
 log4j.appender.migration.MaxFileSize=2500KB
 # Keep one backup file
 log4j.appender.migration.MaxBackupIndex=2
+
+log4j.appender.cities=org.apache.log4j.FileAppender
+log4j.appender.cities.layout=org.apache.log4j.PatternLayout
+log4j.appender.cities.layout.ConversionPattern=%d %5p [%t] (%F:%L) - %m%n
+log4j.appender.cities.File=logs\\invalidcities.log
+log4j.appender.cities.MaxBackupIndex=0
+
