--- a/JDSMigration/nbproject/private/private.properties
+++ b/JDSMigration/nbproject/private/private.properties
@@ -1,6 +1,6 @@
-compile.on.save=false
+compile.on.save=true
 do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=D:\\Documents and Settings\\aloko\\Application Data\\NetBeans\\7.2\\build.properties
+user.properties.file=C:\\Users\\Shailendra\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
