--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -41,6 +41,8 @@ update_password = update users set password=?,isPasswordReset=? where username=?
 ! City ------------------------------------------------------
 city = select city from cities
 
+city_search = select city from cities where city like ?
+
 search_city = select id, city from cities where city like ?
 
 city_insert = insert into cities(city) values(?)
