--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1501,3 +1501,33 @@ get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
  validate_state = select * from states where state = ?
  validate_subscriberno = select * from subscriber where subscriberNumber = ?
  validate_subtype = select * from subscriber_type where subtype = ? and subtypedesc = ?
+
+# ------------------------
+# Please refer list
+# ------------------------
+get_pl_refer_list = SELECT \
+                        t5.subscriberName, \
+                        t1.id, \
+                        t1.subscriberID, \
+                        t2.journalGroupID, \
+                        t2.endYear \
+                      FROM \
+                        subscriber t5, \
+                        subscription t1, \
+                        subscriptiondetails t2, \
+                        subscription t3, \
+                        subscriptiondetails t4 \
+                      WHERE \
+                        t1.subscriberID = t3.subscriberID AND \
+                        t1.id = t2.subscriptionID AND \
+                        t3.id = t4.subscriptionID AND \
+                        t2.journalGroupID <> t4.journalGroupID AND \
+                        t2.endYear = YEAR(CURDATE()) AND \
+                        t1.subscriberID = t5.id AND \
+                        t2.active = TRUE \
+                      GROUP BY \
+                        t5.subscriberName, \
+                        t1.id, \
+                        t1.subscriberID, \
+                        t2.journalGroupID, \
+                        t2.endYear; \
