--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1506,9 +1506,10 @@ get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
 # Please refer list
 # ------------------------
 get_pl_refer_list = SELECT \
+                        t5.id, \
+                        t5.email, \
+                        t5.subscriberNumber, \
                         t5.subscriberName, \
-                        t1.id, \
-                        t1.subscriberID, \
                         t2.journalGroupID, \
                         t2.endYear \
                       FROM \
@@ -1526,8 +1527,7 @@ get_pl_refer_list = SELECT \
                         t1.subscriberID = t5.id AND \
                         t2.active = TRUE \
                       GROUP BY \
-                        t5.subscriberName, \
-                        t1.id, \
-                        t1.subscriberID, \
-                        t2.journalGroupID, \
-                        t2.endYear; \
+                        t5.id, \
+                        t2.journalGroupID \
+                      ORDER BY \
+                        t5.id
