--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -10,8 +10,8 @@ log4j.rootLogger=FATAL, stdout, migration
 
 log4j.logger.JDSMigration.OldInward=FATAL
 log4j.logger.JDSMigration.Inward=FATAL
-log4j.logger.JDSMigration.Temp=FATAL
-log4j.logger.JDSMigration.IndTemp=FATAL
+log4j.logger.JDSMigration.Temp=DEBUG
+log4j.logger.JDSMigration.IndTemp=DEBUG
 log4j.logger.JDSMigration.Subscriber=FATAL
 log4j.logger.JDSMigration.Subscription=FATAL
 log4j.logger.JDSMigration.Corr=FATAL
