--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1110,9 +1110,10 @@ check_ml =select id FROM mailing_list where \
                 journalId =  (select id from journals where journals.journalName = ?) \
                 and issue = ? and `year` = ?
 
-search_mldtl = select id, journalCode, subtypecode, subscriberNumber, subscriberName, department , institution, \
+search_mldtl = select ml.id, journalCode, ml.subtypecode, subscriberNumber, subscriberName, department , institution, \
                 address, city, district, state, country, pincode, copies, issue, month, `year`, startYear, startMonth, endYear, endMonth \
-                FROM mailing_list_detail where mailinglistid = ?
+                FROM mailing_list_detail ml, subscriber_type where mailinglistid = ? and ml.subtypecode = subscriber_type.subtypecode 
+                
 
 get_ml_id = select id from mailing_list where journalId = (select id from journals where journals.journalName = ?) and \
              issue = ? and `year` = ? and month = (select id from months where months.month = ?)
@@ -1242,7 +1243,8 @@ search_bil_ui = select \
 get_susbcriber_for_rem1 = Select subscription.id from subscription, subscriptiondetails \
                             where subscriptiondetails.subscriptionID = subscription.id \
                             and subscription.active and subscriptiondetails.endYear >= year(curdate()) \
-                            and subscription.id not in ( select reminders.subscriptionId from reminders)
+                            and subscription.id not in ( select reminders.subscriptionId from reminders) \
+                            and subscription.legacy <> 1
 
 get_susbcriber_for_rem2 = SELECT distinct subscription.id \
                             FROM subscriber, subscription, subscriptiondetails, subscriber_type, reminders \
@@ -1290,7 +1292,7 @@ insert_rem = INSERT INTO reminders(subscriptionId, balance, reminderType, remind
 
 gen_reminders_subscriber =  select subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
                                 subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
-                                subscriber.email \
+                                subscriber.email, reminders.id \
                                 from reminders, subscription, \
                                 subscriber, subscriber_type \
                                 where \
@@ -1302,7 +1304,7 @@ get_reminders_subscriber =  select subscriber.id, subscription.id as subId, subs
                                 subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
                                  subscriber.department, subscriber.institution, subscriber.shippingAddress, \
                                 cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
-                                subscriber.email \
+                                subscriber.email, reminders.id \
                                 from reminders, subscription, \
                                 subscriber left join cities on subscriber.city = cities.id \
                                 left join states on subscriber.state = states.id \
