mailing list changes - select by country and instead of number for month showing first three characters of the month

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -793,7 +793,7 @@ cf_inst_f = select sum(mailing_list_detail.copies) as inst_f \
             and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
             and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
             group by \
-            mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality 
+            mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality
 
 cf_ind_i =  select sum(mailing_list_detail.copies) as ind_i \
             from mailing_list_detail left join subscriber_type on mailing_list_detail.subtypecode = subscriber_type.subtypecode \
@@ -906,7 +906,7 @@ list_susbsriber = select subscriber.subscriberNumber, subscriber.subscriberName,
                     left join journal_groups on subscriptiondetails.journalGroupID = journal_groups.id \
                     left join journal_group_contents on journal_group_contents.journalGroupId = journal_groups.id \
                     left join journals on journal_group_contents.journalId = journals.id \
-                    where subscription.active = 1 
+                    where subscription.active = 1
 
 ! End List subscriber
 
@@ -1111,9 +1111,12 @@ check_ml =select id FROM mailing_list where \
                 and issue = ? and `year` = ?
 
 search_mldtl = select ml.id, journalCode, ml.subtypecode, subscriberNumber, subscriberName, department , institution, \
-                address, city, district, state, country, pincode, copies, issue, month, `year`, startYear, startMonth, endYear, endMonth \
-                FROM mailing_list_detail ml, subscriber_type where mailinglistid = ? and ml.subtypecode = subscriber_type.subtypecode 
-                
+                 address, city, district, state, country, pincode, copies, issue, month, `year`, startYear, \
+                left((select month from months where months.Id = startMonth), 3) as startMonth, endYear, \
+               left((select month from months where months.Id = endMonth), 3) as endMonth \
+                    FROM mailing_list_detail ml where mailinglistid = ?
+
+
 
 get_ml_id = select id from mailing_list where journalId = (select id from journals where journals.journalName = ?) and \
              issue = ? and `year` = ? and month = (select id from months where months.month = ?)
@@ -1533,3 +1536,5 @@ get_pl_refer_list = SELECT \
                         t2.journalGroupID \
                       ORDER BY \
                         t5.id
+
+get_email_ids = select email from subscriber where email is not null and email <> ""
