--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1113,8 +1113,8 @@ check_ml =select id FROM mailing_list where \
 search_mldtl = select ml.id, journalCode, ml.subtypecode, subscriberNumber, subscriberName, department , institution, \
                  address, city, district, state, country, pincode, copies, issue, month, `year`, startYear, \
                 left((select month from months where months.Id = startMonth), 3) as startMonth, endYear, \
-               left((select month from months where months.Id = endMonth), 3) as endMonth \
-                    FROM mailing_list_detail ml where mailinglistid = ?
+               left((select month from months where months.Id = endMonth), 3) as endMonth, subscriber_type.subtype as subType \
+                 FROM mailing_list_detail ml, subscriber_type where mailinglistid = ? and ml.subtypecode = subscriber_type.subtypecode
 
 
 
