Added a footer in case a label is generated. Footer shows the address where the package should be delivered if it is not delivered to the address.

--- a/trunk/web/WEB-INF/classes/jds_mailinglist.properties
+++ b/trunk/web/WEB-INF/classes/jds_mailinglist.properties
@@ -44,6 +44,17 @@ lly2    = 578.27
 urx2    = 425.2
 ury2    = 691.65
 
+########Information for Footer for LABEL########
+fllx1    = 57
+flly1    = 57
+furx1    = 255
+fury1    = 114
+
+fllx2    = 57
+flly2    = 17
+furx2    = 255
+fury2    = 539
+
 # Definition of two columns
 # llx (lower-left x), lly (lower-left y), urx (upper-right x), ury (upper-right y), leading, alignment
 # (6, 5, 15, 9), (6, 20.4, 15, 24.4)
