--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1214,10 +1214,13 @@ update_bil = update back_issue_list SET sent_to_subscriber = true, sent_on = cur
 search_bil = select mailing_list_detail.id, journalCode, subtypecode, subscriberNumber, subscriberName, department , institution, \
                 address, city, district, state, country, pincode, mailing_list_detail.copies, mailing_list_detail.issue, \
                 mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.startYear, \
-                mailing_list_detail.startMonth, mailing_list_detail.endYear, mailing_list_detail.endMonth \
+                left((select month from months where months.Id = mailing_list_detail.startMonth), 3) as startMonth, \
+                mailing_list_detail.endYear, left((select month from months where months.Id = mailing_list_detail.endMonth), 3) as endMonth, \
+                subscriber_type.subtype as subType
             FROM \
-            mailing_list_detail, subscriptiondetails, back_issue_list \
+            mailing_list_detail, subscriptiondetails, back_issue_list, subscriber_type \
             where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
+            and mailing_list_detail.subtypecode = subscriber_type.subtypecode \
             and mailing_list_detail.bilid = back_issue_list.id \
             and  mailing_list_detail.startYear >= subscriptiondetails.startYear \
             and mailing_list_detail.bilid <> ' '
