Add the serial no for a label. If periodical is selected in the mailing list UI, add the text periodical is selected. If add header is added, then the header is added. Enable of disable the print label and print sticker buttons when mailing list button is clicked.

--- a/trunk/web/WEB-INF/classes/jds_mailinglist.properties
+++ b/trunk/web/WEB-INF/classes/jds_mailinglist.properties
@@ -1,14 +1,21 @@
-########Common Information########
-leading     = 10.0
 #Check this site to get the #define for the text alignment, font
 #http://api.itextpdf.com/itext/constant-values.html#com.itextpdf.text.Element.ALIGN_BASELINE
 #1 = ALIGN_CENTER
 #0 = ALIGN_LEFT
+# Fonts supported are Courier, Helvetica, symbol, times roman, zapfdingbats
+########Common Information########
+leading         = 10
 textAlignment   = 0
 fontFamily      = Courier
 fontSize        = 10
 fontStyle       = NORMAL
 ########Information for Sticker########
+stextAlignment   = 0
+sfontFamily      = Courier
+sfontSize        = 12
+sfontStyle       = NORMAL
+sfontSizeHeader  = 10
+
 stickerColumns  = 2
 stickerRows     = 8
 #4.9mm
@@ -34,6 +41,14 @@ pageHeight    = 297.0
 #210mm = For A4 size paper
 pageWidth     = 210.0
 ########Information for Label########
+lfixedLeading     = 0.0
+lmultipliedLeading = 1.2
+ltextAlignment   = 0
+lfontFamily      = Courier
+lfontSize        = 12
+lfontStyle       = NORMAL
+lfontSizeHeader  = 10
+
 llx1    = 170.1
 lly1    = 141.7
 urx1    = 425.2
@@ -44,7 +59,7 @@ lly2    = 578.27
 urx2    = 425.2
 ury2    = 691.65
 
-########Information for Footer for LABEL########
+#Information for Footer for LABEL
 fllx1    = 57
 flly1    = 57
 furx1    = 255
@@ -54,6 +69,32 @@ fllx2    = 57
 flly2    = 17
 furx2    = 255
 fury2    = 539
+
+#Information for the serial number
+sllx1    = 57
+slly1    = 227
+surx1    = 142
+#sury1    = 227
+sury1    = 256
+
+sllx2    = 57
+slly2    = 654
+surx2    = 142
+#sury2    = 654
+sury2    = 683
+
+#Information for the PERIODICAL String
+pllx1    = 57
+plly1    = 312
+purx1    = 227
+#pury1    = 312
+pury1    = 341
+
+pllx2    = 57
+plly2    = 735
+purx2    = 227
+#pury2    = 735
+pury2    = 764
 
 # Definition of two columns
 # llx (lower-left x), lly (lower-left y), urx (upper-right x), ury (upper-right y), leading, alignment
