bug fixes and enhancement as requested by IAS: - fix for 0 prefix on the chq/DD number - Default Demand draft selected in the inward screen - Ajax autocomplete on the search agent page - New Inward Button on View Inward and Inward Ack screen - Inward purpose is now mentioned in the ack

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1514,12 +1514,8 @@ get_miId_for_inward = Select missing_issue.id, subscriber.subscriberNumber \
 # Please refer list
 # ------------------------
 get_pl_refer_list = SELECT \
-                        t5.id, \
-                        t5.email, \
-                        t5.subscriberNumber, \
-                        t5.subscriberName, \
-                        t2.journalGroupID, \
-                        t2.endYear \
+                        t5.id as subscriberID, \
+                        t1.id as subscriptionID \
                       FROM \
                         subscriber t5, \
                         subscription t1, \
@@ -1532,12 +1528,36 @@ get_pl_refer_list = SELECT \
                         t3.id = t4.subscriptionID AND \
                         t2.journalGroupID <> t4.journalGroupID AND \
                         t2.endYear = YEAR(CURDATE()) AND \
+                        t4.endYear > YEAR(CURDATE()) AND \
                         t1.subscriberID = t5.id AND \
                         t2.active = TRUE \
                       GROUP BY \
-                        t5.id, \
-                        t2.journalGroupID \
+                        subscriberID, subscriptionID \
                       ORDER BY \
-                        t5.id
+                        subscriberID
+
+get_pl_refer_list_for_ui = SELECT \
+                                t3.subscriberNumber, \
+                                t3.subscriberName, \
+                                t4.id AS subscriptionID, \
+                                t6.journalGroupName, \
+                                t5.endYear, \
+                                t3.email \
+                            FROM \
+                                prl t1, \
+                                prl_details t2, \
+                                subscriber t3, \
+                                subscription t4, \
+                                subscriptiondetails t5, \
+                                journal_groups t6 \
+                            WHERE \
+                                t1.id = t2.prl_id AND \
+                                t2.subscriber_id = t3.id AND \
+                                t2.subscription_id = t4.id AND \
+                                t4.id = t5.subscriptionID AND \
+                                t5.journalGroupID = t6.id AND \
+                                t3.email like ? \
+                            GROUP BY \
+                                t3.subscriberNumber
 
 get_email_ids = select email from subscriber where email is not null and email <> ""
