add subscription for free subscribers

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -158,6 +158,8 @@ search_subType = select id, subtypecode, subtypedesc, subtype, nationality, inst
 
 get_subscriber_type = select subtype from subscriber where subscriberNumber = ?
 
+get_subscriber_type_for_id = select subtype from subscriber where id = ?
+
 ! End Subscriber Type----------------------------------------------------
 
 
@@ -448,6 +450,7 @@ get_last_subscriber = SELECT subscriberNumber FROM subscriber where YEAR(subscri
 get_subscriber_by_number = select t1.id as subscriberID \
                       ,t1.subscriberNumber\
                       ,t1.subscriberName \
+                      ,t1.subtype as subtypeID \
                       ,DATE_FORMAT(t1.subscriberCreationDate,'%d/%m/%Y') as subscriberCreationDate \
                       ,t1.shippingAddress \
                       ,t1.invoiceAddress \
@@ -614,6 +617,28 @@ get_subscription_detail_by_subscription_id =    select t2.id \
                                 and t1.id = ? \
                                 order by t2.id asc
 
+get_subscription_detail_by_subscription_id_free = SELECT \
+                                                    t2.id, \
+                                                    t3.journalGroupName AS journalGroupName, \
+                                                    t2.journalGroupID, \
+                                                    t2.startYear, \
+                                                    t2.startMonth, \
+                                                    t2.endYear, \
+                                                    t2.copies, \
+                                                    0 AS total, \
+                                                    0 AS journalGroupCost, \
+                                                    t2.active \
+                                                  FROM \
+                                                    subscription t1, \
+                                                    subscriptiondetails t2, \
+                                                    journal_groups t3 \
+                                                  WHERE \
+                                                    t1.id = t2.subscriptionID AND \
+                                                    t2.journalGroupID = t3.id AND \
+                                                    t1.id = ? \
+                                                  ORDER BY \
+                                                    t2.id ASC
+
 #insert_subscription = insert into subscription(subscriberID,inwardID,balance,subscriptionDate,subscriptionTotal,remarks) \
 #                     values ((select id from subscriber where subscriberNumber=?),(select id from inward where inwardNumber=?),?,?,?,?)
 
@@ -636,6 +661,27 @@ get_subscription_details =  select t1.id, t2.journalGroupName, t1.copies \
                             where t1.journalGroupID = t2.id \
                             and t1.journalPriceGroupID = t3.id \
                             and t1.subscriptionID = ?
+
+get_subscription_details_free_subscribers = SELECT \
+                                                t3.journalGroupName, \
+                                                t2.startYear, \
+                                                t2.endYear, \
+                                                t2.copies, \
+                                                0 as total, \
+                                                t1.active \
+                                              FROM \
+                                                subscription t1, \
+                                                subscriptiondetails t2, \
+                                                journal_groups t3, \
+                                                subscriber t4, \
+                                                subscriber_type t5 \
+                                              WHERE \
+                                                t1.subscriberID = t4.id AND \
+                                                t4.subtype = t5.id AND \
+                                                t5.subtype = 'Free' AND \
+                                                t1.id = t2.subscriptionID AND \
+                                                t2.journalGroupID = t3.id AND \
+                                                t1.id = ?
 
 get_journal_group_price = select id, rate from subscription_rates where journalGroupId = ? and subtypeid = ? \
                             and year = ? and period = ?
@@ -1561,3 +1607,13 @@ get_pl_refer_list_for_ui = SELECT \
                                 t3.subscriberNumber
 
 get_email_ids = select email from subscriber where email is not null and email <> ""
+
+is_free_subscriber = SELECT \
+                        count(1) \
+                      FROM \
+                        subscriber_type \
+                      WHERE \
+                        id = ? AND \
+                        subtype = 'Free' \
+                      LIMIT \
+                        1
