--- a/web/WEB-INF/classes/jds_email.properties
+++ b/web/WEB-INF/classes/jds_email.properties
@@ -12,13 +12,13 @@
 # mail.*.user - The user name to use when connecting to mail servers using the specified protocol. Overrides the mail.user property.
 # Debugging issues - http://www.oracle.com/technetwork/java/faq-135477.html#condebug
 #ns1.ias.ac.in : 111.93.135.162
+#---------Common---------------------------
+FROM_TEXT      = Indian Academy Of Sciences
 #---------IAS config---------------------------
-#FROM_TEXT      = Indian Academy Of Sciences
 #FROM_EMAIL_ID  = orders@ias.ernet.in
 #SMTP_HOST_NAME = 111.93.135.162
 #AUTH           = false
 #---------Gmail config---------------------------
-FROM_TEXT      = Indian Academy Of Sciences
 FROM_EMAIL_ID  = jds.adm.all@gmail.com
 SMTP_HOST_NAME = smtp.gmail.com
 AUTH           = true
