Display and re-send changes. Change in query to include invoice no

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1304,7 +1304,7 @@ get_susbcriber_for_rem2 = SELECT distinct subscription.id \
                             AND subscription.subscriberID = subscriber.id AND subscriptiondetails.endYear >= year(CURDATE()) \
                             AND subscriber.subtype = subscriber_type.id AND subscriber_type.subtype = 'Paid' \
                             AND reminders.subscriptionId = subscription.id and reminders.reminderType = '1' \
-                            and reminders.reminderType <> '2' and reminders.reminderType <> '3';
+                            and reminders.reminderType <> '2' and reminders.reminderType <> '3'
 
 get_susbcriber_for_rem2 = SELECT distinct subscription.id \
                             FROM subscriber, subscription, subscriptiondetails, subscriber_type, reminders \
@@ -1312,7 +1312,7 @@ get_susbcriber_for_rem2 = SELECT distinct subscription.id \
                             AND subscription.subscriberID = subscriber.id AND subscriptiondetails.endYear >= year(CURDATE()) \
                             AND subscriber.subtype = subscriber_type.id AND subscriber_type.subtype = 'Paid' \
                             AND reminders.subscriptionId = subscription.id \
-                            and reminders.reminderType = '2' and reminders.reminderType <> '3';
+                            and reminders.reminderType = '2' and reminders.reminderType <> '3'
 
 get_subscription_total =  SELECT (sum(subscription_rates.rate * subscriptiondetails.copies)) as subscription_total \
            FROM subscriptiondetails, journal_groups, subscription_rates, subscription, subscriber \
@@ -1349,7 +1349,7 @@ gen_reminders_subscriber =  select subscription.id as subId, subscriber_type.sub
                                 subscriber, subscriber_type \
                                 where \
                                 subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
-                                and subscriber.subtype = subscriber_type.id and reminders.reminderDate = curdate() \
+                                and subscriber.subtype = subscriber_type.id \
                                 and reminders.reminderType = ?
 
 get_reminders_subscriber =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
@@ -1365,35 +1365,29 @@ get_reminders_subscriber =  select subscriber.id, subscription.id as subId, subs
                                 where \
                                 subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
                                 and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
-                                and reminders.reminderType = ? and reminders.reminderDate = curdate()
+                                and reminders.reminderType = ?
 
 
 insert_reminder_details = insert into reminder_details ( reminderId, medium, language, sent_date) \
                             VALUES (?, ?, ?, curdate())
 
-get_subscribed_journals = select journals.journalCode, journals.journalName, journal_groups.journalGroupName, \
-                            subscriptiondetails.copies, subscriptiondetails.startYear, subscriptiondetails.startMonth, \
-                            subscriptiondetails.endMonth, subscriptiondetails.endYear \
-                            from reminders, subscription, subscriptiondetails, journal_group_contents, journal_groups, journals \
-                            where reminders.subscriptionId = subscription.id and subscriptiondetails.subscriptionID = subscription.id \
-                            and subscriptiondetails.journalGroupID = journal_groups.id and journal_group_contents.journalGroupId = journal_groups.id \
-                            and journal_group_contents.journalId = journals.id and subscriptiondetails.active = 1 \
-                            and reminders.id = ?
+get_subscribed_journals = select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                 subscriber.department, subscriber.institution, subscriber.shippingAddress, \
+                                cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
+                                subscriber.email, reminders.id, invoice.invoiceNumber, invoice.invoiceCreationDate \
+                                from reminders, subscription \
+                                left join inward on subscription.inwardID = inward.id \
+                                left join invoice on invoice.subscriptionId = subscription.id, \
+                                subscriber left join cities on subscriber.city = cities.id \
+                                left join states on subscriber.state = states.id \
+                                left join countries on subscriber.country = countries.id \
+                                left join districts on subscriber.district = districts.id, subscriber_type \
+                                where \
+                                subscription.subscriberID = subscriber.id and reminders.subscriptionId = subscription.id \
+                                and subscriber.subtype = subscriber_type.id and year(reminders.reminderDate)= year(curdate()) \
+                                and reminders.reminderType = ?
 
-get_subscriber_reminders = select  t1.subscriptionId,\
-                                    t1.balance,\
-                                    t1.reminderType as rtype,\
-                                    DATE_FORMAT(t1.reminderDate,'%d/%m/%Y') as rdate,\
-                                    DATE_FORMAT(t2.sent_date,'%d/%m/%Y') as sdate,\
-                                    t2.medium \
-                            from  reminders t1, \
-                                reminder_details t2, \
-                                subscription t3, \
-                                subscriber t4 \
-                            where t1.subscriptionId = t3.id \
-                            and t3.active = true \
-                            and t3.subscriberID = t4.id \
-                            and t4.subscriberNumber = ?
 
 #------------------------------------------------------------------------------
 #End Reminders
