--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1571,7 +1571,11 @@ get_pl_refer_list_for_ui = SELECT \
                             GROUP BY \
                                 t3.subscriberNumber
 
-get_email_ids = select email from subscriber where email is not null and email <> ""
+get_email_ids = select email \
+                from subscriber, subscriber_type \
+                where email is not null and email <> "" \
+                and subscriber.subtype = subscriber_type.id
+                
 
 is_free_subscriber = SELECT \
                         count(1) \
